@@ -1,0 +1,10 @@
+//colors
+$color_black_haze_approx: #f7f7f7;
+
+html {
+	background-color: $color_black_haze_approx;
+}
+
+.inner-card {
+	padding: 30px;
+}
