@@ -4,7 +4,7 @@
     <div class="header">
       <div class="row">  
         <div class="col-lg-12">
-            <h1>Sign you ass up</h1>
+            <h5><!-- No title needed probably--></h5>
         </div>
       </div>
     </div>
@@ -13,14 +13,15 @@
 
     <div class="row">
       <div class="card">
-        <div class="body">
+        <div class="body inner-card" >
           <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
             <%= devise_error_messages! %>
 
-            <div class="field">
+           <div class="form-group">
               <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true %>
+              <%= f.email_field :email, autofocus: true, class:"form-control", placeholder:"jimbob@supercooldude.co" %>
             </div>
+              
 
             <div class="field">
               <%= f.label :password %>
@@ -35,12 +36,11 @@
               <%= f.password_field :password_confirmation, autocomplete: "off" %>
             </div>
 
-            <div class="actions">
-              <%= f.submit "Sign up" %>
+            <div class="form-group">
+              <%= f.submit "Sign Up", class:"btn btn-primary m-t-15 waves-effect" %>
             </div>
           <% end %>
 
-          <%= render "devise/shared/links" %>
         </div>
       </div>
     </div>
