@@ -15,3 +15,5 @@ Changelog
 + Added jquery-rails gme
 + Added rspec test to project
 + Added top navbar with login/logout
++ Signup page styling
++ Added basic-style.scss to stylesheets and manifest
